--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <script id="ze-snippet"
-        src="https://static.zdassets.com/ekr/snippet.js?key=fb730aac-f509-4fb9-b90f-2d316c9d463f&"></script>
+        src="https://static.zdassets.com/ekr/snippet.js?key=f2d80132-163c-4ad4-858f-960bf79afac9"></script>
     <script>
         zE('messenger', 'open');
         const urlParams = new URLSearchParams(window.location.search);
