--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
         let lang = 'id'
         const urlParams = new URLSearchParams(window.location.search);
         const key = urlParams.get('key');
-        const decodedPayload = decodeURIComponent(key)
-        const parsedPayload = JSON.parse(decodedPayload)
-        console.log(parsedPayload)
-        if (parsedPayload.widgetKey && parsedPayload.widgetKey !== '') {
-            widgetKey = parsedPayload.widgetKey
-        }
-        if (parsedPayload.lang && parsedPayload.lang !== '') {
-            lang = parsedPayload.lang
+        if (key && key !== '') {
+            const decodedPayload = decodeURIComponent(key)
+            const parsedPayload = JSON.parse(decodedPayload)
+            console.log(parsedPayload)
+            if (parsedPayload.widgetKey && parsedPayload.widgetKey !== '') {
+                widgetKey = parsedPayload.widgetKey
+            }
+            if (parsedPayload.lang && parsedPayload.lang !== '') {
+                lang = parsedPayload.lang
+            }
         }
         const scriptUrl = `https://static.zdassets.com/ekr/snippet.js?key=${widgetKey}`
         var script = document.createElement('script');
