--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 window.parent.postMessage(
                     JSON.stringify({
                         event_code: "ym-client-event",
-                        data: ""
+                        data: "Widget Closed"
                     }), "*");
             });
         }
