--- a/index.html
+++ b/index.html
@@ -33,22 +33,27 @@
         const scriptUrl = `https://static.zdassets.com/ekr/snippet.js?key=${widgetKey}`
         var script = document.createElement('script');
         script.onload = () => {
-            zE('messenger', 'open');
             zE('messenger:set', 'locale', lang);
-            if (jwtKey && jwtKey !== '') {
-                zE('messenger', 'loginUser', function (callback) {
-                    callback(jwtKey);
-                })
-            }
-            zE('messenger:on', 'close', () => {
-                document.getElementById("toggle-button").style.display = "block"
-                console.log("WIDGET CLOSED")
-                window.parent.postMessage(
-                    JSON.stringify({
-                        event_code: "ym-client-event",
-                        data: "Widget Closed"
-                    }), "*");
-            });
+            zE('messenger', 'logoutUser');
+            setTimeout(() => {
+                if (jwtKey && jwtKey !== '') {
+                    zE('messenger', 'loginUser', function (callback) {
+                        callback(jwtKey);
+                    })
+                }
+                setTimeout(() => {
+                    zE('messenger', 'open');
+                    zE('messenger:on', 'close', () => {
+                        document.getElementById("toggle-button").style.display = "block"
+                        console.log("WIDGET CLOSED")
+                        window.parent.postMessage(
+                            JSON.stringify({
+                                event_code: "ym-client-event",
+                                data: "Widget Closed"
+                            }), "*");
+                    });
+                }, 100)
+            }, 100)
         }
         script.setAttribute('src', scriptUrl)
         script.setAttribute('id', "ze-snippet")
