--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div class="backdrop"></div>
     <button onclick="hideShow()" id="toggle-button" class="toggleButton">Continue to chat with Agent</button>
     <script type="text/javascript">
         let widgetKey = 'f2d80132-163c-4ad4-858f-960bf79afac9'
