--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         var script = document.createElement('script');
         script.onload = () => {
             zE('messenger:set', 'locale', lang);
-            // setTimeout(() => {
+            setTimeout(() => {
                 if (jwtKey && jwtKey !== '') {
                     zE('messenger', 'logoutUser');
-                    // setTimeout(() => {
+                    setTimeout(() => {
                         zE('messenger', 'loginUser', function (callback) {
                             callback(jwtKey);
                         })
-                    // }, 0)
+                    }, 200)
                 }
                 setTimeout(() => {
                     zE('messenger', 'open');
@@ -57,7 +57,7 @@
                     });
                 }, 500)
 
-            // }, 200)
+            }, 200)
         }
         script.setAttribute('src', scriptUrl)
         script.setAttribute('id', "ze-snippet")
